src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutput_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutput_StringErrorContext.class */
public final class AMDDebugOutput_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglDebugMessageEnableAMD(IIIJZ)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("glDebugMessageEnableAMD(IILjava/nio/IntBuffer;Z)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("glDebugMessageEnableAMD(IIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("nglDebugMessageInsertAMD(IIIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("glDebugMessageInsertAMD(IIILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("glDebugMessageInsertAMD(IIILjava/lang/CharSequence;)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("nglDebugMessageCallbackAMD(JJ)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("glDebugMessageCallbackAMD(Lorg/lwjgl/opengl/GLDebugMessageAMDCallbackI;J)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("nglGetDebugMessageLogAMD(IIJJJJJ)I", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("glGetDebugMessageLogAMD(ILjava/nio/IntBuffer;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;Ljava/nio/ByteBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("glDebugMessageEnableAMD(II[IZ)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        methods.put("glGetDebugMessageLogAMD(I[I[I[I[ILjava/nio/ByteBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/AMDDebugOutputErrorContext");
        return methods;
    }
}
